--- a/pom.xml
+++ b/pom.xml
@@ -5,4 +5,8 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Hello world</name>
   <description>Example project</description>
+  <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+  </properties>
 </project>
